# FAQ-Chatbot

./: README.md  txt_to_json.py
src/: config.json  faq_data.json  main.py  pyproject.toml
