[tool.poetry]
name = "jinachat"
version = "0.1.0"
description = ""
authors = ["Md Zubayer Hossain Patowari <zubayerhossain.1zihad1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
